fix: note title responsiveness and dark mode flash

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
   --tertiary-bg: #e0f3ff;
   --hover-bg: #e7f5fd;
   --accent: #ff1f13;
-  --button: #3b82f6;
+  --button: #39a2f2;
 }
 
 [data-theme="dark"] {
@@ -32,12 +32,35 @@ body {
   height: 100%;
 }
 
+.div-edit {
+  outline: none;
+  line-height: auto;
+}
+
+.div-edit:empty {
+  display: block;
+  min-height: 3rem;
+}
+
+.div-edit:empty:focus::before {
+  content: "";
+  display: block;
+  opacity: 0.5;
+}
+
+.div-edit:empty::before {
+  content: "Untitled";
+  display: block;
+  opacity: 0.5;
+}
+
 .container {
   display: flex;
   width: 100%;
   height: 100%;
   background-color: var(--primary-bg);
   overflow: scroll;
+  transition: all 0.25s ease-in;
 }
 
 .header {
@@ -137,6 +160,7 @@ input:checked + .slider:before {
   padding: 2rem;
   background-color: var(--secondary-bg);
   overflow-y: scroll;
+  transition: background-color 0.25s ease-in;
 }
 
 .notes-list {
@@ -198,13 +222,13 @@ input:checked + .slider:before {
 }
 
 .btn {
-  padding: 1rem;
+  padding: 1rem 0;
   width: 100%;
   box-shadow: none;
   border-radius: 2rem;
   font-size: 1rem;
   font-weight: 700;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.1rem;
   cursor: pointer;
   text-transform: uppercase;
   display: flex;
@@ -223,8 +247,10 @@ button:focus {
 }
 
 .delete {
+  padding: 1rem 0;
   background-color: transparent;
   margin-left: auto;
+  margin-top: 0.25rem;
   border: 2px solid var(--accent);
   color: var(--accent);
   min-width: 10rem;
@@ -234,7 +260,7 @@ button:focus {
 .btn-icon {
   height: 1.2rem;
   width: 1.2rem;
-  margin: 0.5rem;
+  margin: 0 0.5rem 0.2rem 0;
 }
 
 .right {
@@ -269,8 +295,12 @@ textarea:focus {
   font-size: 2rem;
   margin: 2rem 0;
   color: var(--button);
-  height: auto;
   resize: none;
+  height: auto;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 
 .note-note {
@@ -299,7 +329,11 @@ textarea:focus {
   .delete {
     width: auto;
     min-width: 0;
-    padding: 0.5rem;
+    padding: 1rem;
+  }
+
+  .btn-icon {
+    margin: 0;
   }
 
   .add {
